Added support for generic deserialization